--- a/promociones.html
+++ b/promociones.html
@@ -114,7 +114,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             
-                       Realizando prueba con git 
+                       Realizando segunda prueba 
                         </div>
                     </div>  
                 </div>
